--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -2,6 +2,7 @@
  width: 286px;
  height: 286px;
  border-radius: 8px;
+ margin: 7px;
 
 }
 .product{
@@ -10,6 +11,10 @@
     border: 1px solid purple;
     border-radius: 8px;
     padding: 7px;
+    position: relative;
+}
+.product-info p{
+    margin-bottom: 0px;
 }
 .product-name{
     font-family: 'lato';
@@ -17,5 +22,24 @@
     font-weight: 400;
     font-size: 21px;
     line-height: 25px;
+    margin-top: 7px;
+    margin-top: 7px;
 
+
+}
+.product-info{
+    margin:0px 14px;
+}
+.btn-cart{
+    width: 100%;
+    background: oldlace;
+    border-radius: 0px 0px 8px 8px;
+    border: none;
+    position: absolute;
+    bottom: 0px;
+    
+
+}
+.btn-cart:hover{
+    background-color: orange;
 }
