--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -7,10 +7,10 @@
 }
 .product{
     width: 300px;
-    height: 510px;
+    height: 530px;
     border: 1px solid purple;
     border-radius: 8px;
-    padding: 7px;
+    padding:0;
     position: relative;
 }
 .product-info p{
@@ -28,11 +28,12 @@
 
 }
 .product-info{
-    margin:0px 14px;
+   margin: 0 14px;
+  
 }
 .btn-cart{
     width: 100%;
-    background: oldlace;
+    background: burlywood;
     border-radius: 0px 0px 8px 8px;
     border: none;
     position: absolute;
