sticky position added

--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -8,6 +8,14 @@
     gap: 45px;
     margin: 100px 50px;
 }
+.oder-details-cart{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: yellow;
+    padding: 50px;
+    font-size: 20px;
+}
 
 @media  screen and (max-width:1100px) {
     .products-container{
