--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -15,6 +15,7 @@
 }
 .product-info p{
     margin-bottom: 0px;
+   
 }
 .product-name{
     font-family: 'lato';
@@ -38,9 +39,14 @@
     border: none;
     position: absolute;
     bottom: 0px;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 .btn-cart:hover{
     background-color: orange;
+}
+.btn-text{
+    margin-right: 5px;
 }
