--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -12,9 +12,12 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    background-color: yellow;
+  
     padding: 50px;
     font-size: 20px;
+}
+.cart-container{
+    background-color: darksalmon;
 }
 
 @media  screen and (max-width:1100px) {
